<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <LinearLayout
        android:id="@+id/registerOngoing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:max="100"
            android:indeterminate="true"/>
    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lytRegister"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgRegisterIcon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/placeholder_avatar"
                android:layout_gravity="center"
                android:src="@mipmap/ic_person_foreground"/>

            <Button
                android:id="@+id/btnLoadAvatar"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:text="@string/loadImage"
                android:onClick="loadImage"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterNick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/hintRegisterNick">

                <EditText
                    android:id="@+id/etRegisterNick"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>
            
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/hintAge">
                
                <EditText
                    android:id="@+id/etRegisterAge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"/>
                
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/hintUser">

                <EditText
                    android:id="@+id/etRegisterUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/hintPassword">

                <EditText
                    android:id="@+id/etRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/pbRegisterPasswordStrength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:max="4"/>

            <TextView
                android:id="@+id/tvRegisterPasswordStrength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/passwordStrengthPoor"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/hintRepeatPassword">

                <EditText
                    android:id="@+id/etRegisterRepeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/chkRegisterShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chkShowPassword"/>

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="5dp"
                android:textSize="18sp"
                android:text="@string/gender"/>

            <RadioGroup
                android:id="@+id/rgRegisterGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/rbNonBinary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:checked="true"
                    android:text="@string/nonBinary"/>

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/male"/>

            </RadioGroup>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:onClick="register"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:layout_gravity="center"
                android:text="@string/btnRegister"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>