<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MangaDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBarOperations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:background="@drawable/topless_border"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mangaDetailsImg"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="200dp"
                android:layout_height="200dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/author"/>

                <TextView
                    android:id="@+id/tvDetailsAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/status"/>

                <TextView
                    android:id="@+id/tvDetailsStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/type"/>

                <TextView
                    android:id="@+id/tvDetailsType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/genres" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layerType="software"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@drawable/dotted_line"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:background="@drawable/topless_border">

            <TextView
                android:id="@+id/tvDetailsGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/synopsis" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layerType="software"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@drawable/dotted_line"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:background="@drawable/topless_border">

            <TextView
                android:id="@+id/tvDetailsSynopsis"
                android:padding="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>